k8s-manifests/security/allow-front-to-back.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: demo-backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mi-web
    ports:
    - protocol: TCP
      port: 8080
